--- a/css/main.css
+++ b/css/main.css
@@ -277,7 +277,7 @@ textarea {
   resize: none;
 }
 
-.site-nav, .auth-nav, .advant-comp, .work-list, .comand .team, .comand .team .photo .comand-link, .client .client-container, .footer-adres_container, .button-container .button-list {
+.site-nav, .auth-nav, .about-us__list, .work-list, .comand .team, .comand .team .photo .comand-link, .client .client-container, .footer-adres_container, .button-container .button-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -471,19 +471,6 @@ textarea {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .site-nav__link--active {
-    padding-bottom: 8px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .site-nav__link--active {
-    padding-top: 32px;
-    padding-bottom: 29px;
-  }
-}
-
 .site-nav__link--active::after {
   display: block;
   position: absolute;
@@ -504,6 +491,19 @@ textarea {
 .site-nav__link--active:hover::after, .site-nav__link--active:focus::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav__link--active {
+    padding-bottom: 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__link--active {
+    padding-top: 32px;
+    padding-bottom: 29px;
+  }
 }
 
 .site-nav .link {
@@ -717,7 +717,6 @@ textarea {
 }
 
 .main-hero {
-  min-width: 320px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -769,18 +768,18 @@ textarea {
   }
 }
 
-.main-hero .hero-item {
-  width: 320px;
+.main-hero .main-hero__item {
+  width: 360px;
   text-align: center;
 }
 
 @media screen and (min-width: 1200px) {
-  .main-hero .hero-item {
-    width: 694px;
+  .main-hero .main-hero__item {
+    width: 696px;
   }
 }
 
-.main-hero .hero-item .hero-title {
+.main-hero .main-hero__item .main-hero__title {
   color: #ffffff;
   font-weight: 900;
   font-size: 26px;
@@ -792,14 +791,14 @@ textarea {
 }
 
 @media screen and (min-width: 1200px) {
-  .main-hero .hero-item .hero-title {
+  .main-hero .main-hero__item .main-hero__title {
     font-size: 44px;
     line-height: 1.36;
     margin-bottom: 20px;
   }
 }
 
-.main-hero .hero-item .service {
+.main-hero .main-hero__item .main-hero__botton {
   font-family: Roboto;
   font-weight: bold;
   color: white;
@@ -828,7 +827,7 @@ textarea {
   }
 }
 
-.advant-comp {
+.about-us__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -837,13 +836,13 @@ textarea {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .advant-comp {
+  .about-us__list {
     margin: -15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .advant-comp {
+  .about-us__list {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -851,32 +850,32 @@ textarea {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .comp-item {
+  .about-us__item {
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .comp-item {
+  .about-us__item {
     -ms-flex-preferred-size: calc((100% - 30px * 3) / 4);
         flex-basis: calc((100% - 30px * 3) / 4);
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .comp-item {
+  .about-us__item {
     margin: 15px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .comp-item:nth-child(-n + 3) {
+  .about-us__item:nth-child(-n + 3) {
     margin-bottom: 30px;
   }
 }
 
-.icon-container {
+.about-us__icon-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -892,7 +891,7 @@ textarea {
   margin-bottom: 30px;
 }
 
-.section-title {
+.about-us__title {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -903,18 +902,19 @@ textarea {
 }
 
 @media screen and (max-width: 767px) {
-  .section-title {
+  .about-us__title {
     text-align: center;
   }
 }
 
-.text {
+.about-us__text {
+  font-family: Roboto;
   font-style: normal;
   font-weight: normal;
-  color: var(--primari-text-color);
   font-size: 14px;
   line-height: 1.71;
-  margin: 0;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
 .profesion {
@@ -1069,10 +1069,14 @@ textarea {
 
 .comand .team .photo .icon-item {
   text-align: center;
-  color: #757575;
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
   font-size: 16px;
   line-height: 1.18;
-  margin: 0;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
 .comand .team .photo .social-link {
@@ -1317,9 +1321,13 @@ textarea {
 .adress {
   margin-top: 20px;
   margin-bottom: 10px;
-  color: #ffffff;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
 .footer-adres_container .adres-item {
@@ -1964,7 +1972,7 @@ textarea {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.87;
-  color: #757575;
   letter-spacing: 0.03em;
+  color: #757575;
 }
 /*# sourceMappingURL=main.css.map */
