--- a/sass/components/Front-page/_comand.scss
+++ b/sass/components/Front-page/_comand.scss
@@ -80,10 +80,9 @@
 
         .icon-item {
           text-align: center;
-          color: $main-text-color;
-          font-size: 16px;
-          line-height: 1.18;
           margin: 0;
+
+          @include text(16px,1.18,0.03em);
         }
 
 // cоц сети команды
