--- a/sass/components/Front-page/_footer.scss
+++ b/sass/components/Front-page/_footer.scss
@@ -67,9 +67,8 @@
       .adress {
         margin-top: 20px;
         margin-bottom: 10px;
-        color: #ffffff;
-        font-size: 14px;
-        line-height: 1.71;
+
+         @include text(14px,1.71,0.03em,white);
       }
 
       
@@ -99,7 +98,7 @@
       }
 
       .footer-title {
-          text-align: center;
+        text-align: center;
         margin-bottom: 20px;
         margin-top: 0;
       
