--- a/sass/components/Front-page/_footer.scss
+++ b/sass/components/Front-page/_footer.scss
@@ -68,7 +68,7 @@
         margin-top: 20px;
         margin-bottom: 10px;
 
-         @include text(14px,1.71,0.03em,white);
+         @include text(14px,1.71,0.03em);
       }
 
       
