--- a/sass/util/_mixin.scss
+++ b/sass/util/_mixin.scss
@@ -4,7 +4,7 @@
  
 }
 
-@mixin text($size,$height,$spacing,$color) {
+@mixin text($size,$height,$spacing) {
     
  font-family: Roboto;
  font-style: normal;
@@ -12,6 +12,6 @@
  font-size:$size;
  line-height:$height;
  letter-spacing:$spacing;
- color:$color;
+ 
  
 }
