--- a/css/main.css
+++ b/css/main.css
@@ -509,7 +509,6 @@ textarea {
 .site-nav .link {
   position: relative;
   letter-spacing: 0.02em;
-  font-style: normal;
   font-weight: 500;
   color: #212121;
   -webkit-transition-property: color;
@@ -563,7 +562,6 @@ textarea {
   font-family: Raleway;
   color: #2196F3;
   font-weight: bold;
-  font-style: normal;
   letter-spacing: 0.03em;
 }
 
@@ -657,7 +655,6 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.16;
@@ -908,6 +905,7 @@ textarea {
 }
 
 .about-us__text {
+  color: #757575;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -962,7 +960,6 @@ textarea {
   margin: 0;
   padding: 0;
   font-family: Roboto;
-  font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -1069,6 +1066,7 @@ textarea {
 .comand .team .photo .icon-item {
   text-align: center;
   margin: 0;
+  color: #757575;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -1319,6 +1317,7 @@ textarea {
 .adress {
   margin-top: 20px;
   margin-bottom: 10px;
+  color: white;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -1354,7 +1353,6 @@ textarea {
   margin-top: 0;
   padding: 0;
   font-family: Roboto;
-  font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -1446,7 +1444,6 @@ textarea {
 
 .footer-form {
   font-family: Roboto;
-  font-style: normal;
   font-weight: bold;
   margin-bottom: 20px;
   font-size: 14px;
@@ -1632,7 +1629,6 @@ textarea {
 
 .modal .form .form-title {
   font-family: Roboto;
-  font-style: normal;
   font-weight: bold;
   font-size: 20px;
   line-height: 1.5;
@@ -1653,8 +1649,6 @@ textarea {
   display: block;
   margin-bottom: 4px;
   font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -1725,8 +1719,6 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.03em;
@@ -1820,7 +1812,6 @@ textarea {
 
 .button-container .button-list .portfolio-button .item {
   font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -1932,8 +1923,6 @@ textarea {
 .title-menu_item {
   margin: 0;
   font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
   font-size: 14px;
   line-height: 1.55;
   letter-spacing: 0.03em;
@@ -1950,7 +1939,6 @@ textarea {
   padding-top: 20px;
   padding-left: 24px;
   font-family: Roboto;
-  font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
