--- a/sass/components/Front-page/_comand.scss
+++ b/sass/components/Front-page/_comand.scss
@@ -81,7 +81,7 @@
         .icon-item {
           text-align: center;
           margin: 0;
-
+          color: $main-text-color;
           @include text(16px,1.18,0.03em);
         }
 
