--- a/sass/components/portfolio/_portfolio-projeckt.scss
+++ b/sass/components/portfolio/_portfolio-projeckt.scss
@@ -22,6 +22,7 @@
 
 .style-chyld {
   
+  
   position: relative;
   margin: 14px;
   border: 1px solid #eeeeee;
@@ -74,7 +75,12 @@
     padding-right: 24px;
   }
 
- 
+ @media screen and (min-width:1200px){
+    padding-top: 66px;
+    padding-bottom: 66px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
   
 }
 
