--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,7 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
@@ -380,11 +381,16 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   background-color: #ffffff;
-  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
   .menu-container {
+    -webkit-transform: translateX(-120%);
+            transform: translateX(-120%);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-top: 1px solid #ECECEC;
     -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -395,13 +401,13 @@ textarea {
 
 @media screen and (max-width: 767px) {
   .menu-container.is-open {
-    display: block;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 @media screen and (max-width: 767px) {
   .menu-container {
-    display: none;
     position: absolute;
     top: 100%;
     width: 100%;
@@ -1539,25 +1545,22 @@ textarea {
 
 .is-hidden {
   opacity: 0;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   pointer-events: none;
 }
 
 .backdrop.is-hidden .modal {
-  -webkit-transform: scale(0.5);
-          transform: scale(0.5);
-}
-
-@media screen and (min-width: 1200px) {
-  .backdrop.is-hidden .modal {
-    -webkit-transform: translate(-50%, -50%) scale(0.5);
-            transform: translate(-50%, -50%) scale(0.5);
-  }
+  -webkit-transform: translate(-50%, -50%) scale(0.5);
+          transform: translate(-50%, -50%) scale(0.5);
 }
 
 .modal {
   padding: 40px 10px 40px 10px;
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1572,6 +1575,8 @@ textarea {
 @media screen and (min-width: 480px) and (max-width: 1199px) {
   .modal {
     position: relative;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
     padding: 40px;
   }
 }
@@ -1580,12 +1585,10 @@ textarea {
   .modal {
     position: absolute;
     padding: 40px;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
     width: 528px;
     height: 581px;
-    top: 50%;
-    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
   }
 }
 
