--- a/sass/components/Front-page/_backdrop.scss
+++ b/sass/components/Front-page/_backdrop.scss
@@ -23,24 +23,24 @@
     
     .is-hidden  {
       opacity: 0;
-        pointer-events: none;
+      transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      pointer-events: none;
     }
   
     
     .backdrop.is-hidden .modal {
-      transform:  scale(0.5);
-     
 
-      @media screen and (min-width:1200px){
-        transform: translate(-50%, -50%) scale(0.5);
-      }
-    }
+     transform: translate(-50%, -50%) scale(0.5);
+
+     }
 
     .modal {
 
         padding: 40px 10px 40px 10px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1);
         
-        transform:  scale(1);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         opacity: 1;
 
@@ -51,17 +51,17 @@
 
         @media screen and (min-width:480px) and (max-width:1199px){
           position: relative;
+          transform: translate(-50%, -50%) scale(1);
           padding: 40px;
         }
 
         @media screen and (min-width:1200px){
           position: absolute;
           padding: 40px;
-          transform: translate(-50%, -50%) scale(1);
           width: 528px;
           height: 581px;
-          top: 50%;
-          left: 50%;
+          transform: translate(-50%, -50%) scale(1);
+          
         }
 
       
