--- a/sass/components/Front-page/_main-nav.scss
+++ b/sass/components/Front-page/_main-nav.scss
@@ -5,6 +5,8 @@
   align-items: center;
   width: 100%;
   
+  overflow: hidden;
+  
 
   .menu-button__icon{
     @media screen and (min-width: 768px) {
@@ -14,13 +16,16 @@
 }
 
   .menu-container{
+    
     align-items: center;
     background-color: #ffffff;
     
-    z-index: 1;
+    
     
     @media screen and (max-width:767px){
-        
+      transform: translateX(-120%);
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
       border-top: 1px solid #ECECEC;
       box-shadow:0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
       padding-top: 58px;
@@ -29,13 +34,15 @@
 
     &.is-open{
       @media screen and (max-width:767px){
-        display: block;
+        
+        transform: translateX(0);
+       
       }
     }
     
 
     @media screen and (max-width:767px){
-      display: none;
+      
       position: absolute;
       top: 100%;
       width: 100%;
