--- a/css/main.css
+++ b/css/main.css
@@ -571,7 +571,7 @@ textarea {
   letter-spacing: 0.03em;
 }
 
-.logo .page-header__logo--black {
+.logo .logo--black {
   color: #212121;
 }
 
@@ -1556,9 +1556,9 @@ textarea {
 }
 
 .modal {
-  padding: 40px 10px 40px 10px;
   top: 50%;
   left: 50%;
+  padding: 40px 10px 40px 10px;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1572,7 +1572,7 @@ textarea {
   border-radius: 4px;
 }
 
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .modal {
     position: relative;
     -webkit-transform: translate(-50%, -50%) scale(1);
