--- a/sass/components/Front-page/_logo-header.scss
+++ b/sass/components/Front-page/_logo-header.scss
@@ -7,7 +7,7 @@
   font-weight: bold;
   letter-spacing: 0.03em;
 
-  .page-header__logo--black{
+  .logo--black{
 
     @include logo($title-color);
     
