--- a/sass/components/Front-page/_comand.scss
+++ b/sass/components/Front-page/_comand.scss
@@ -1,4 +1,4 @@
-.comand {
+.command {
   min-width: 320px;
     padding-top: 94px;
     padding-bottom: 94px;
@@ -17,7 +17,7 @@
     }
 
 
-    .comand-title {
+    .command__title {
       text-align: center;
       color: $title-color;
       font-weight: bold;
@@ -28,7 +28,7 @@
     }
 
 
-    .team {
+    .command__list {
       @extend %list;
       
       @media screen and (min-width:768px) and (max-width:1199px){
@@ -43,7 +43,7 @@
         justify-content: space-between;
       }
 
-      .photo {
+      .command__item {
 
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
           0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -68,7 +68,7 @@
             
           }
         
-        .comand-initials {
+        .command__initials {
           margin-top: 30px;
           margin-bottom: 10px;
           text-align: center;
@@ -78,7 +78,7 @@
           line-height: 1.18;
         }
 
-        .icon-item {
+        .command__profesion {
           text-align: center;
           margin: 0;
           color: $main-text-color;
@@ -87,26 +87,9 @@
 
 // cоц сети команды
 
-        .social-link {
 
-          display: flex;
-          width: 44px;
-          height: 44px;
-          justify-content: center;
-          align-items: center;
-          border-radius: 50%;
-          transition-property: background-color;
-          transition-duration: 250ms;
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        .command-social {
 
-          &:hover .icon-about_as {
-            fill: #ffffff;
-          }
-            &:hover {
-            background-color: $hover-color;
-          }
-        }
-        .comand-link {
           @extend %list;
           justify-content: space-around;         
           margin-left: auto;
@@ -118,7 +101,28 @@
 
         }
 
-        .icon-about_as {
+        .command-social__link {
+
+          display: flex;
+          width: 44px;
+          height: 44px;
+          justify-content: center;
+          align-items: center;
+          border-radius: 50%;
+          transition-property: background-color;
+          transition-duration: 250ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+          &:hover .command-social__icon {
+            fill: #ffffff;
+          }
+            &:hover {
+            background-color: $hover-color;
+          }
+        }
+       
+
+        .command-social__icon {
           fill: #afb1b8;
           transition-property: fill;
           transition-duration: 250ms;
