--- a/css/main.css
+++ b/css/main.css
@@ -295,7 +295,7 @@ textarea {
   display: flex;
 }
 
-.footer-button, .modal .form .service {
+.footer-form__button, .modal .service {
   font-family: Roboto;
   font-weight: bold;
   color: white;
@@ -1411,7 +1411,7 @@ textarea {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer__socials .footer__icon .footer__link .footer-icon_item {
+.footer__socials .footer__icon .footer__link .footer__icon--white {
   fill: #ffffff;
 }
 
@@ -1419,11 +1419,11 @@ textarea {
   background-color: #2196F3;
 }
 
-.footer__socials .footer-ikon + .footer-ikon {
+.footer__socials .footer__ikon + .footer__ikon {
   margin-left: 4px;
 }
 
-.footer-form_container {
+.footer-form__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1432,7 +1432,7 @@ textarea {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-form_container {
+  .footer-form__container {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1441,7 +1441,7 @@ textarea {
 }
 
 @media screen and (max-width: 1199px) {
-  .footer-form_container {
+  .footer-form__container {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1449,7 +1449,7 @@ textarea {
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-form_container {
+  .footer-form__container {
     width: 570px;
   }
 }
@@ -1471,7 +1471,7 @@ textarea {
   }
 }
 
-.footer-input {
+.footer-form__input {
   margin-bottom: 20px;
   padding: 13px 16px;
   color: #fff;
@@ -1488,19 +1488,19 @@ textarea {
 }
 
 @media screen and (min-width: 480px) {
-  .footer-input {
+  .footer-form__input {
     width: 450px;
     margin-bottom: 20px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-input {
+  .footer-form__input {
     width: 358px;
   }
 }
 
-.footer-button {
+.footer-form__button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1511,12 +1511,12 @@ textarea {
 }
 
 @media screen and (min-width: 1200px) {
-  .footer-button {
+  .footer-form__button {
     margin-left: 10px;
   }
 }
 
-.footer-button .form-button_icon {
+.footer-form__button .footer-form__button--icon {
   content: "";
   width: 24px;
   height: 24px;
@@ -1594,7 +1594,7 @@ textarea {
   }
 }
 
-.modal .close {
+.modal .modal__btn-close {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1617,22 +1617,18 @@ textarea {
   right: 0;
 }
 
-.modal .close .close-icon {
+.modal .modal__btn-close .modal__btn-icon {
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal .close .close-icon:hover {
+.modal .modal__btn-close .modal__btn-icon:hover {
   fill: #2196F3;
 }
 
-.modal .form {
-  width: 100%;
-}
-
-.modal .form .form-title {
+.modal .modal-form__title {
   font-family: Roboto;
   font-weight: bold;
   font-size: 20px;
@@ -1645,12 +1641,12 @@ textarea {
 }
 
 @media screen and (min-width: 1200px) {
-  .modal .form .form-title {
+  .modal .modal-form__title {
     line-height: 1.15;
   }
 }
 
-.modal .form .label {
+.modal .modal-form__label {
   display: block;
   margin-bottom: 4px;
   font-family: Roboto;
@@ -1660,16 +1656,15 @@ textarea {
   color: #757575;
 }
 
-.modal .form .form-label {
+.modal .modal-form__input--flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
   margin-bottom: 10px;
-  position: relative;
 }
 
-.modal .form .form-label .form-input {
+.modal .modal-form__input--flex .modal-form__input {
   width: 100%;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -1681,15 +1676,15 @@ textarea {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal .form .form-label .form-input:focus {
+.modal .modal-form__input--flex .modal-form__input:focus {
   border-color: #2196F3;
 }
 
-.modal .form .form-label .form-input:focus + .form-icon {
+.modal .modal-form__input--flex .modal-form__input:focus + .modal-form__icon {
   fill: #2196F3;
 }
 
-.modal .form .form-label .form-icon {
+.modal .modal-form__input--flex .modal-form__icon {
   position: absolute;
   top: 50%;
   left: 15px;
@@ -1705,7 +1700,7 @@ textarea {
   background-size: auto;
 }
 
-.modal .form .checkbox-container {
+.modal .checkbox-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1716,7 +1711,7 @@ textarea {
   margin-bottom: 30px;
 }
 
-.modal .form .checkbox-container .label-checkbox {
+.modal .checkbox-container .label-checkbox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1731,39 +1726,39 @@ textarea {
 }
 
 @media screen and (min-width: 1200px) {
-  .modal .form .checkbox-container .label-checkbox {
+  .modal .checkbox-container .label-checkbox {
     font-size: 14px;
     line-height: 1.71;
   }
 }
 
-.modal .form .checkbox-container .label-checkbox .checkbox {
+.modal .checkbox-container .label-checkbox .checkbox {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
 }
 
-.modal .form .checkbox-container .label-checkbox .checkbox:checked + .checkbox-icon {
+.modal .checkbox-container .label-checkbox .checkbox:checked + .checkbox-icon {
   background: #2196F3;
   border: 0;
   border-color: #2196F3;
 }
 
-.modal .form .checkbox-container .label-checkbox .checkbox-icon {
+.modal .checkbox-container .label-checkbox .checkbox-icon {
   border: 2px solid #212121;
   fill: #ffffff;
   border-radius: 4px;
 }
 
-.modal .form .checkbox-container .label-checkbox .form-item {
+.modal .checkbox-container .label-checkbox .form-item {
   margin-left: 7px;
 }
 
-.modal .form .checkbox-container .label-checkbox .form-item .link-checkbox {
+.modal .checkbox-container .label-checkbox .form-item .link-checkbox {
   color: #2196F3;
 }
 
-.modal .form .service.form-botton {
+.modal .service.form-botton {
   display: block;
   margin-left: auto;
   margin-right: auto;
