--- a/sass/util/_mixin.scss
+++ b/sass/util/_mixin.scss
@@ -12,8 +12,16 @@
  font-size:$size;
  line-height:$height;
  letter-spacing:$spacing;
- 
 
- 
- 
+}
+
+.visuallly-hidden{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: 1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
