--- a/sass/components/portfolio/_portfolio-projeckt.scss
+++ b/sass/components/portfolio/_portfolio-projeckt.scss
@@ -1,14 +1,11 @@
-
 .projeckt {
   padding-top: 40px;
   padding-bottom: 60px;
 
-  @media screen and (min-width:768px){
-    padding-top: 14px; 
- }
-
+  @media screen and (min-width: 768px) {
+    padding-top: 14px;
+  }
 }
-
 
 .portfolio-style {
   padding: 0;
@@ -16,18 +13,14 @@
   list-style: none;
   flex-wrap: wrap;
   display: flex;
-  
-  
 }
 
 .style-chyld {
-  
-  
   position: relative;
   margin: 14px;
   border: 1px solid #eeeeee;
 
-   &:hover {
+  &:hover {
     border: 1px solid #eeeeee;
     box-sizing: border-box;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -37,51 +30,46 @@
   &:hover .title-menu_function {
     transform: translateY(0);
   }
-
- }
+}
 
 .title-menu {
   position: absolute;
   overflow: hidden;
-
- 
 }
 
 .title-menu_function {
-  
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (min-width:320px){
+  @media screen and (min-width: 320px) {
     padding-top: 22px;
     padding-bottom: 22px;
     padding-left: 24px;
     padding-right: 24px;
   }
 
-  @media screen and (min-width:480px) and (max-width:767px){
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     padding-top: 82px;
     padding-bottom: 77px;
     padding-left: 24px;
     padding-right: 24px;
   }
 
-  @media screen and (min-width:768px){
-    padding-top: 52px;
+  @media screen and (min-width: 768px) {
+    padding-top: 53px;
     padding-bottom: 53px;
     padding-left: 24px;
     padding-right: 24px;
   }
 
- @media screen and (min-width:1200px){
+  @media screen and (min-width: 1200px) {
     padding-top: 66px;
     padding-bottom: 66px;
     padding-left: 24px;
     padding-right: 24px;
   }
-  
 }
 
 .title-menu_item {
@@ -91,15 +79,14 @@
   line-height: 1.55;
 
   letter-spacing: 0.03em;
-   color: #ffffff;
+  color: #ffffff;
 
-  @media screen and (min-width:480px){
+  @media screen and (min-width: 480px) {
     font-size: 18px;
   }
 }
 
 .style-title {
-             
   padding-top: 20px;
   padding-left: 24px;
   font-family: Roboto;
@@ -117,5 +104,5 @@
   padding-bottom: 20px;
   margin: 0;
 
-  @include text(16px,1.87,0.03em);
+  @include text(16px, 1.87, 0.03em);
 }
