--- a/sass/components/Front-page/_main-nav.scss
+++ b/sass/components/Front-page/_main-nav.scss
@@ -1,218 +1,167 @@
-
 .main-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  
   overflow: hidden;
-  
-
-  .menu-button__icon{
+  .menu-button__icon {
     @media screen and (min-width: 768px) {
       display: none;
     }
   }
 }
 
-  .menu-container{
-    
-    align-items: center;
-    background-color: #ffffff;
-    
-    
-    
-    @media screen and (max-width:767px){
-      transform: translateX(-120%);
-      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.menu-container {
+  align-items: center;
+  background-color: #ffffff;
 
-      border-top: 1px solid #ECECEC;
-      box-shadow:0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-      padding-top: 58px;
-      padding-bottom: 82px;
-    }
+  @media screen and (max-width: 767px) {
+    transform: translateX(-120%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-top: 1px solid #ececec;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 1px 3px rgba(0, 0, 0, 0.16);
+    padding-top: 58px;
+    padding-bottom: 82px;
+  }
 
-    &.is-open{
-      @media screen and (max-width:767px){
-        
-        transform: translateX(0);
-       
-      }
+  &.is-open {
+    @media screen and (max-width: 767px) {
+      transform: translateX(0);
     }
-    
+  }
 
-    @media screen and (max-width:767px){
-      
-      position: absolute;
-      top: 100%;
-      width: 100%;
-      left: 0;
-    }
+  @media screen and (max-width: 767px) {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    left: 0;
+    z-index: 1;
+  }
 
-    @media screen and (min-width:768px){
-      display: flex;
-    }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 
-    .menu-button{
-      
-      width: 40px;
-      height: 40px;
-      background-color: #ffffff;
-      margin: 0;
-      border: 0;
-      padding: 0;
-      outline: 0;
+.menu-button {
+  width: 40px;
+  height: 40px;
+  background-color: #ffffff;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  outline: 0;
 
-    & .menu-button__icon--cross{
-      display: none;
-    }
+  & .menu-button__icon--cross {
+    display: none;
+  }
 
-    &.is-open .menu-button__icon--cross{
-      display: block;
-    }
+  &.is-open .menu-button__icon--cross {
+    display: block;
+  }
 
-    &.is-open .menu-button__icon--menu{
-      display: none;
-    }
+  &.is-open .menu-button__icon--menu {
+    display: none;
+  }
+}
 
-    }
-
-    
-    
-  
 // основная навигация-хедера
 
-  .site-nav{
-    align-items: center;
-    @extend %list;
-    display: flex;
-    margin-right:84px ;
+.site-nav {
+  align-items: center;
+  @extend %list;
+  display: flex;
+  margin-right: 84px;
 
-    @media screen and (min-width:1199px){
-      margin-right: 305px;
-     
+  @media screen and (min-width: 1199px) {
+    margin-right: 305px;
+  }
+
+  &__item:nth-child(-n + 2) {
+    margin-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
     }
+  }
 
-    &__item:nth-child(-n + 2){
-      margin-bottom:40px;
-  
-      @media screen and (min-width: 768px){
-     
-        margin-bottom:0;
-      }
+  &__item + &__item {
+    @media screen and (min-width: 768px) {
+      margin-left: 50px;
     }
+  }
 
-    &__item +  &__item{
-      @media screen and (min-width: 768px){
-        margin-left: 50px;
-        
-      }
-    }
-
-    
   //  подчеркивание ссылок меню
 
-    &__link--active::after {
-      display: block;
-      position: absolute;
-      content: "";
-      height: 4px;
-      width: 100%;
-      bottom: 0;
-      
-      background: $hover-color;
-      border-radius: 2px;
-      transform: scale(0);
-      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__link--active::after {
+    display: block;
+    position: absolute;
+    content: "";
+    height: 4px;
+    width: 100%;
+    bottom: 0;
 
-     
+    background: $hover-color;
+    border-radius: 2px;
+    transform: scale(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__link--active:hover::after,
+  &__link--active:focus::after {
+    transform: scaleX(1);
+  }
+
+  &__link--active {
+    @media screen and (max-width: 767px) {
+      padding-bottom: 8px;
     }
-    
-    
-    &__link--active:hover::after,
-    &__link--active:focus::after {
+
+    @media screen and (min-width: 768px) {
+      padding-top: 32px;
+      padding-bottom: 29px;
+    }
+  }
+
+  .link {
+    @extend %link-stile-none;
+    position: relative;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+    color: $title-color;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &.current {
+      color: $hover-color;
+    }
+
+    &.current::after {
       transform: scaleX(1);
     }
 
-     &__link--active{
-
-      @media screen and (max-width:767px){
-        padding-bottom: 8px;
-      }
-
-      @media screen and (min-width:768px){
-        padding-top: 32px;
-        padding-bottom: 29px;
-      }
-      
-    }
-     
-      .link {
-      @extend %link-stile-none;
-      position: relative;
-      letter-spacing: 0.02em;
-      font-weight: 500;
-      color: $title-color;
-
-      transition-property: color;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-      &.current {
-        color: $hover-color;
-      }
-
-      &.current::after {
-        transform: scaleX(1);
-      }
-
-      &:hover,
-      &:focus,
-      &:active {
+    &:hover,
+    &:focus,
+    &:active {
       color: $hover-color;
-      }
-
-      @media screen and (max-width:767px){
-        font-size: 18px;
-        line-height: 1.16;
-      }
-
-      @media screen and (min-width:768px){
-        font-size: 14px;
-        line-height: 1.14;
-      }
     }
 
-   
-
-   
-
-    @media screen and (max-width: 767px){
-      width: 100%;
-      flex-direction: column;
+    @media screen and (max-width: 767px) {
+      font-size: 18px;
+      line-height: 1.16;
     }
 
-    
- }
-  
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
+  }
 
- 
-         
-
-
-  
- 
-
-  
-
-  
-
-  
-
-
-
-
-    
-
-
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    flex-direction: column;
+  }
+}
