--- a/sass/components/portfolio/_portfolio-projeckt.scss
+++ b/sass/components/portfolio/_portfolio-projeckt.scss
@@ -1,7 +1,6 @@
 .projeckt {
   padding-top: 40px;
   padding-bottom: 60px;
-
   @media screen and (min-width: 768px) {
     padding-top: 14px;
   }
@@ -103,6 +102,6 @@
   padding-left: 24px;
   padding-bottom: 20px;
   margin: 0;
-
+  color: #757575;
   @include text(16px, 1.87, 0.03em);
 }
