--- a/sass/components/Front-page/_footer.scss
+++ b/sass/components/Front-page/_footer.scss
@@ -1,163 +1,147 @@
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color:$footer-bg-color;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: $footer-bg-color;
 
-    .logo {
-        font-family: Raleway;
-        color: $hover-color;
-        font-weight: bold;
-        font-size: 26px;
-        line-height: 1.19;
-        letter-spacing: 0.03em;
-        padding: 0;
-    
-        .footer__logo--white {
-            color: #ffffff;
-          }
-        }
+  .logo {
+    font-family: Raleway;
+    color: $hover-color;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    padding: 0;
+
+    .footer__logo--white {
+      color: #ffffff;
+    }
+  }
 }
 
 .footer__container--center {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    @media screen and (max-width:1199px){
-      flex-direction: column;
-    }
+  @media screen and (max-width: 1199px) {
+    flex-direction: column;
+  }
 
-    @media screen and (min-width:1200px){
-      align-items: baseline;
+  @media screen and (min-width: 1200px) {
+    align-items: baseline;
+    justify-content: space-between;
+  }
+
+  .footer__conteiner--adaptive {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      display: flex;
       justify-content: space-between;
+      width: 603px;
+      margin-bottom: 60px;
     }
-
-    .footer__conteiner--adaptive {
-      
-      @media screen and (min-width:768px) and (max-width:1199px){
-        display: flex;
-        justify-content: space-between;
-        width: 603px;
-        margin-bottom: 60px;
-      }
-      @media screen and (min-width:1200px){
-        display: flex;
-        justify-content: space-between;
-        width: 506px;
-        align-items:baseline;
-        
-      }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      justify-content: space-between;
+      width: 506px;
+      align-items: baseline;
     }
-    
+  }
 }
 
 .footer__adress {
-    display: flex;
-    flex-direction: column;
-    
-    width: 232px;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
 
-    @media screen and (max-width:1199px){
-      align-items: center;
-    }
+  width: 232px;
+  margin: 0;
+
+  @media screen and (max-width: 1199px) {
+    align-items: center;
+  }
 }
 
-      .footer__text {
-        margin-top: 20px;
-        margin-bottom: 10px;
-         color: white;
-         @include text(14px,1.71,0.03em);
+.footer__text {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: white;
+  @include text(14px, 1.71, 0.03em);
+}
+
+.footer__list {
+  @extend %list;
+
+  .footer__item {
+    margin-bottom: 10px;
+  }
+
+  .footer__link {
+    display: flex;
+    @extend %link-stile-none;
+
+    font-size: 14px;
+    line-height: 1.71;
+    color: rgba(255, 255, 255, 0.6);
+
+    @media screen and (max-width: 1199px) {
+      justify-content: center;
+    }
+  }
+}
+
+.footer__title {
+  display: block;
+
+  margin-bottom: 20px;
+  margin-top: 0;
+
+  padding: 0;
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.footer__socials {
+  width: 206px;
+  @media screen and (max-width: 767px) {
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
+
+  .footer__icon {
+    display: inline-block;
+    .footer__link {
+      display: flex;
+      width: 44px;
+      height: 44px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.1);
+      transition-property: background-color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+      .footer__icon--white {
+        fill: #ffffff;
       }
 
-      
-      .footer__list{
-
-        @extend %list;
-        
-
-        .footer__item {
-
-          margin-bottom: 10px;
-          
-        }
-
-        .footer__link {
-          display: flex;
-          @extend %link-stile-none;
-          
-          font-size: 14px;
-          line-height: 1.71;
-          color: rgba(255, 255, 255, 0.6);
-
-          @media screen and (max-width:1199px){
-            justify-content: center;
-          }
-        }
-      }
-
-      .footer__title {
-        display: block;
-        
-        margin-bottom: 20px;
-        margin-top: 0;
-      
-        padding: 0;
-        font-family: Roboto;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        color: #ffffff;
-      }
-
-      .footer__socials{
-        
-        width: 206px;
-       
-        @media screen and (max-width:767px){
-          
-          margin-top: 60px;
-          margin-bottom: 60px;
-          margin-left: auto;
-          margin-right: auto;
-        }
-        
-        @media screen and (max-width:1199px){
-       text-align: center;
-       }
-
-      .footer__icon {
-        display: inline-block; 
-        
-        .footer__link {
-        
-          display:flex;
-          width: 44px;
-          height: 44px;
-          justify-content: center;
-          align-items: center;
-          border-radius: 50%;
-          background-color: rgba(255, 255, 255, 0.1);
-          transition-property: background-color;
-          transition-duration: 250ms;
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-          .footer__icon--white {
-            fill: #ffffff;
-          }
-
-            &:hover {
-            background-color: $hover-color;
-          }
-        }   
-      }
-
-
-      .footer__ikon + .footer__ikon {
-          margin-left: 4px;
+      &:hover {
+        background-color: $hover-color;
       }
     }
+  }
 
-      
+  .footer__ikon + .footer__ikon {
+    margin-left: 4px;
+  }
+}
